from users.models.base import BaseUser


class Artist(BaseUser):
    pass
